===================================
Smartline Lite Changelog
===================================

Version 1.3.5
-----------------------------------
[updated] flexlider to version 2.6.0
[added] slider speed setting to Customizer

Version 1.3.4
-----------------------------------
[added] support for Jetpack Infinite Scroll feature

Version 1.3.3
-----------------------------------
[removed] extract() function from widget files for better readable code
[changed] all themezee.com links to https and made them translatable

Version 1.3.2
-----------------------------------
[added] support for ThemeZee Related Posts plugin
[added] category and tag descriptions on archive template
[added] previous/next post navigation on single post view

Version 1.3.1
-----------------------------------
[added] basic support for wooCommerce
[added] support for ThemeZee Breadcrumbs plugin
[added] email icon to social menu
[added] custom header image settings
[added] theme links in theme options panel

Version 1.3.0
-----------------------------------
[removed] empty spaces at the end of template files
[fixed] styling of 404 template
[changed] CSS styling of navigation for custom navi hover color setting

Version 1.2.9
-----------------------------------
[changed] all h2 post and page titles to h1 for better SEO
[fixed] postmeta styling for widget bundle

Version 1.2.8
-----------------------------------
[added] escaping for translation strings for improved security

Version 1.2.7
-----------------------------------
[added] postmeta setting to Category Posts Boxed widget
[added] postmeta setting to Category Posts Columns widget
[added] postmeta setting to Category Posts Grid widget
[added] postmeta setting to Category Posts Horizontal widget

Version 1.2.6
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin