@@ -7,6 +7,7 @@
     margin-bottom: 4px;
 }
 
+#customize-control-smartline_control_header_content,
 #customize-control-smartline_control_excerpt_text_headline,
 #customize-control-smartline_control_post_images,
 #customize-control-smartline_control_postmeta_headline,
