@@ -4,8 +4,10 @@ Smartline Lite Changelog
 
 Version 1.3.5
 -----------------------------------
-[updated] flexlider to version 2.6.0
+[added] support for new custom logo feature from WordPress 4.5
 [added] slider speed setting to Customizer
+
+You can upload your logo image on Appearance -> Customize -> Site Identity now.
 
 Version 1.3.4
 -----------------------------------
